fix align

--- a/styles.css
+++ b/styles.css
@@ -1038,8 +1038,14 @@ footer {
     .carousel-text h2 {
         font-size: 2rem;
         margin-bottom: 20px !important;
+        text-align: center;
     }
     
+    .carousel-text p {
+        font-size: 1rem;
+        margin-bottom: 15px !important;
+        text-align: center;
+    }
     .stepped-titles {
         padding: 40px 0;
     }
